--- a/AZ-104.md
+++ b/AZ-104.md
@@ -180,7 +180,7 @@ Advanced filtering options and fine-tuned controls, such as the ability to set t
 Diagnose problems with an Azure Virtual network gateway and connections
 Virtual network gateways provide connectivity between on-premises resources and Azure virtual networks. Monitoring gateways and their connections are critical to ensuring communication are not broken. The VPN diagnostics capability provides the ability to diagnose gateways and connections. VPN diagnostics diagnoses the health of the gateway, or gateway connection, and informs you whether a gateway and gateway connections are available. If the gateway or connection is not available, VPN diagnostics tells you why, so you can resolve the problem. Learn more about VPN diagnostics by completing the Diagnose a communication problem between networks tutorial
 
-
+Azure DNS Private Resolver is a new service that enables you to query Azure DNS private zones from an on-premises environment and vice versa without deploying VM based DNS servers.
 
 
 
