--- a/AZ-104.md
+++ b/AZ-104.md
@@ -182,7 +182,17 @@ Virtual network gateways provide connectivity between on-premises resources and 
 
 Azure DNS Private Resolver is a new service that enables you to query Azure DNS private zones from an on-premises environment and vice versa without deploying VM based DNS servers.
 
+- NSG flow log data is written to an Azure Storage account. You need to create an Azure Storage account,
 
+With an Azure Storage account NSG flow logs can be enabled.
+
+- Enable network watcher in the East US region.
+
+- NSG flow logging requires the Microsoft.Insights provider.
+
+https://learn.microsoft.com/en-us/azure/dns/dns-web-sites-custom-domain
+https://learn.microsoft.com/en-us/azure/dns/delegate-subdomain
+https://learn.microsoft.com/en-us/azure/storage/common/storage-network-security?tabs=azure-portal
 
 
  
