--- a/AZ-104.md
+++ b/AZ-104.md
@@ -193,6 +193,12 @@ With an Azure Storage account NSG flow logs can be enabled.
 https://learn.microsoft.com/en-us/azure/dns/dns-web-sites-custom-domain
 https://learn.microsoft.com/en-us/azure/dns/delegate-subdomain
 https://learn.microsoft.com/en-us/azure/storage/common/storage-network-security?tabs=azure-portal
+https://learn.microsoft.com/en-us/azure/network-watcher/network-watcher-nsg-flow-logging-portal
+
+With Sticky Sessions when a client starts a session on one of your web servers, session stays on that specific server. To configure An Azure Load-Balancer For
+
+Sticky Sessions set Session persistence to Client IP.
+https://cloudopszone.com/configure-azure-load-balancer-for-sticky-sessions/
 
 
  
