--- a/AZ-104.md
+++ b/AZ-104.md
@@ -206,5 +206,18 @@ https://www.quora.com/What-is-IP-forwarding
 https://learn.microsoft.com/en-us/azure/load-balancer/load-balancer-multivip-overview
 https://learn.microsoft.com/en-us/azure/load-balancer/load-balancer-overview
 
+The virtual networks can be in the same or different regions, and from the same or different subscriptions. When connecting VNets from different subscriptions, the subscriptions do not need to be associated with the same Active Directory tenant.
+
+Configuring a VNet-to-VNet connection is a good way to easily connect VNets. Connecting a virtual network to another virtual network using the VNet-to-VNet connection type (VNet2VNet) is similar to creating a Site-to-Site IPsec connection to an on-premises location. Both connectivity types use a VPN gateway to provide a secure tunnel using IPsec/IKE, and both function the same way when communicating.
+
+The local network gateway for each VNet treats the other VNet as a local site. This lets you specify additional address space for the local network gateway in order to route traffic.
+
+https://learn.microsoft.com/en-us/azure/virtual-network/virtual-networks-name-resolution-for-vms-and-role-instances
+https://learn.microsoft.com/en-us/azure/dns/private-dns-autoregistration
+https://learn.microsoft.com/en-us/azure/virtual-network/move-across-regions-publicip-powershell
+https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/move-support-resources
+https://learn.microsoft.com/en-us/azure/dns/private-dns-migration-guide
+https://learn.microsoft.com/en-us/azure/vpn-gateway/vpn-gateway-howto-vnet-vnet-resource-manager-portal
+
 
  
