--- a/AZ-104.md
+++ b/AZ-104.md
@@ -227,5 +227,81 @@ https://learn.microsoft.com/en-us/azure/storage/common/storage-redundancy
 https://learn.microsoft.com/en-us/azure/vpn-gateway/vpn-gateway-certificates-point-to-site
 
 
+Azure Import/Export service supports the following of storage accounts:
+✑ Standard General Purpose v2 storage accounts (recommended for most scenarios)
+✑ Blob Storage accounts
+✑ General Purpose v1 storage accounts (both Classic or Azure Resource Manager deployments),
+Azure Import/Export service supports the following storage types:
+✑ Import supports Azure Blob storage and Azure File storage
+✑ Export supports Azure Blob storage
+
+Step 1: Install the Azure File Sync agent on Server1
+The Azure File Sync agent is a downloadable package that enables Windows Server to be synced with an Azure file share
+Step 2: Register Server1.
+Register Windows Server with Storage Sync Service
+Registering your Windows Server with a Storage Sync Service establishes a trust relationship between your server (or cluster) and the Storage Sync Service.
+Step 3: Create a sync group and a cloud endpoint.
+A sync group defines the sync topology for a set of files. Endpoints within a sync group are kept in sync with each other. A sync group must contain one cloud endpoint, which represents an Azure file share and one or more server endpoints. A server endpoint represents a path on registered server.
+Reference:
+
+Group1 already has a cloud endpoint named Share1.
+A sync group must contain one cloud endpoint, which represents an Azure file share and one or more server endpoints.
+
+Correct Answers:
+Yes, one or more server endpoints can be added to the sync group.
+Yes, one or more server endpoints can be added to the sync group.
+
+If you add an Azure file share that has an existing set of files as a cloud endpoint to a sync group, the existing files are merged with any other files that are already on other endpoints in the sync group.
+
+ZRS currently supports standard general-purpose v2, FileStorage and BlockBlobStorage storage account types.
+Incorrect Answers:
+storage1 and storage3: Live migration is supported only for storage accounts that use LRS replication. If your account uses GRS or RA-GRS, then you need to first change your account's replication type to LRS before proceeding. This intermediary step removes the secondary endpoint provided by GRS/RA-GRS.
+Also, only standard storage account types support live migration. Premium storage accounts must be migrated manually.
+storage4: ZRS currently supports standard general-purpose v2, FileStorage and BlockBlobStorage storage account types.
+
+a PowerShell PS1 file: Modify the dataset.csv file in the root folder where the tool resides. Depending on whether you want to import a file or folder or both, add entries in the dataset.csv file
+a driveset CSV file: Modify the driveset.csv file in the root folder where the tool resides
+
+Azure Import/Export service is used to securely import large amounts of data to Azure Blob storage and Azure Files by shipping disk drives to an Azure datacenter.
+The maximum size of an Azure Files Resource of a file share is 5 TB.
+Note:
+There are several versions of this question in the exam. The question has two correct answers:
+1. Azure File Storage
+2. Azure Blob Storage
+The question can have other incorrect answer options, including the following:
+✑ Azure Data Lake Store
+✑ Azure SQL Database
+✑ Azure Data Factory
+
+
+AzCopy is a command-line utility that you can use to copy blobs or files to or from a storage account.
+Incorrect Answers:
+blob, file, table, and queue, file and table only and blob, table, and queue only: AzCopy does not support table and queue storage services.
+file only: AzCopy supports file storage services, as well as blob storage services.
+
+
+Contoso is moving the existing product blueprint files to Azure Blob storage.
+Use unmanaged standard storage for the hard disks of the virtual machines. We use Page Blobs for these.
+
+https://learn.microsoft.com/en-us/azure/import-export/storage-import-export-data-to-files?tabs=azure-portal-preview
+https://learn.microsoft.com/en-us/azure/import-export/storage-import-export-service
+https://learn.microsoft.com/en-us/azure/storage/common/storage-use-azcopy-v10
+https://learn.microsoft.com/en-us/azure/storage/file-sync/file-sync-deployment-guide?tabs=azure-portal%2Cproactive-portal#create-a-sync-group-and-a-%20cloud-endpoint
+https://learn.microsoft.com/en-us/azure/storage/blobs/lifecycle-management-overview?tabs=azure-portal
+
+
+Correct Answers:
+- A Basic Load Balancer supports virtual machines in a single availability set or virtual machine scale set.
+
+
+
+- When using load-balancing rules with Azure Load Balancer, you need to specify health probes to allow Load Balancer to detect the backend endpoint status. The configuration of the health probe and probe responses determine which backend pool instances will receive new flows. You can use health probes to detect the failure of an application on a backend endpoint. You can also generate a custom response to a health probe and use the health probe for flow control to manage load or planned downtime. When a health probe fails, Load Balancer will stop sending new flows to the respective unhealthy instance. Outbound connectivity is not impacted, only inbound connectivity is impacted.
+
+If you use Azure Provided DNS then appropriate DNS suffix will be automatically applied to your virtual machines. For all other options you must either use Fully
+
+Qualified Domain Names (FQDN) or manually apply appropriate DNS suffix to your virtual machines.
+
+
+
 
  
